tratando a exception customizada de validacoes programaticas